--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,18 @@ td {
   border: 1px solid #130969;
   text-align: center;
 }
+
+.custom-loader {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin: auto;
+  background: conic-gradient(#0000 10%, #ffffff);
+  -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  animation: s3 1s infinite linear;
+}
+@keyframes s3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
